[IOTDB-3543] Fix cmd