@@ -41,6 +41,7 @@ import java.lang.management.MonitorInfo;
 import java.lang.management.ThreadInfo;
 import java.lang.management.ThreadMXBean;
 import java.net.MalformedURLException;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.LinkOption;
 import java.nio.file.NoSuchFileException;
@@ -48,8 +49,10 @@ import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.nio.file.StandardCopyOption;
 import java.time.LocalDateTime;
-import java.util.Collections;
+import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.HashMap;
+import java.util.List;
 import java.util.Map;
 import java.util.Properties;
 import java.util.concurrent.TimeUnit;
@@ -59,25 +62,28 @@ import static org.junit.Assert.fail;
 
 public abstract class AbstractNodeWrapper implements BaseNodeWrapper {
   private static final Logger logger = LoggerFactory.getLogger(AbstractNodeWrapper.class);
-  private static final String jreHome = System.getProperty("java.home");
+  private static final String javaCmd =
+      System.getProperty("java.home")
+          + File.separator
+          + "bin"
+          + File.separator
+          + (SystemUtils.IS_OS_WINDOWS ? "java.exe" : "java");
   private final String templateNodePath =
       System.getProperty("user.dir") + File.separator + "target" + File.separator + "template-node";
-  private final String templateNodeLibPath =
+  protected static final String templateNodeLibPath =
       System.getProperty("user.dir")
           + File.separator
           + "target"
           + File.separator
           + "template-node-share"
           + File.separator
-          + "lib";
-  private final File NULL_FILE =
-      SystemUtils.IS_OS_WINDOWS ? new File("nul") : new File("/dev/null");
+          + "lib"
+          + File.separator
+          + "*";
   protected final String testClassName;
   protected final String testMethodName;
   protected final int[] portList;
-  private final int jmxPort;
-  private final String jmxUserName = "root";
-  private final String jmxPassword = "passw!d";
+  protected final int jmxPort;
   private final String TAB = "  ";
   private Process instance;
 
@@ -115,25 +121,6 @@ public abstract class AbstractNodeWrapper implements BaseNodeWrapper {
               }
             });
       }
-      Path destLibPath = Paths.get(destPath, "lib");
-      FileUtils.forceMkdir(destLibPath.toFile());
-      // Create hard link for libs to decrease copy size
-      try (Stream<Path> s = Files.walk(Paths.get(this.templateNodeLibPath))) {
-        s.forEach(
-            source -> {
-              if (source.toFile().isFile()) {
-                Path destination =
-                    Paths.get(
-                        destLibPath.toString(),
-                        source.toString().substring(this.templateNodeLibPath.length()));
-                try {
-                  Files.createLink(destination, source);
-                } catch (IOException e) {
-                  throw new RuntimeException(e);
-                }
-              }
-            });
-      }
       // Make sure the log dir exist, as the first file is output by starting script directly.
       FileUtils.createParentDirectories(new File(getLogPath()));
     } catch (IOException ex) {
@@ -166,8 +153,36 @@ public abstract class AbstractNodeWrapper implements BaseNodeWrapper {
   public void start() {
     try {
       File stdoutFile = new File(getLogPath());
+      List<String> startCmd = new ArrayList<>();
+      startCmd.add(javaCmd);
+      if (!SystemUtils.IS_JAVA_1_8) {
+        startCmd.add("--add-opens=java.base/java.util.concurrent=ALL-UNNAMED");
+        startCmd.add("--add-opens=java.base/java.lang=ALL-UNNAMED");
+        startCmd.add("--add-opens=java.base/java.util=ALL-UNNAMED");
+        startCmd.add("--add-opens=java.base/java.nio=ALL-UNNAMED");
+        startCmd.add("--add-opens=java.base/java.io=ALL-UNNAMED");
+        startCmd.add("--add-opens=java.base/java.net=ALL-UNNAMED");
+      }
+      startCmd.addAll(
+          Arrays.asList(
+              "-Dcom.sun.management.jmxremote.port=" + jmxPort,
+              "-Dcom.sun.management.jmxremote.rmi.port=" + jmxPort,
+              "-Djava.rmi.server.randomIDs=true",
+              "-Dcom.sun.management.jmxremote.ssl=false",
+              "-Dcom.sun.management.jmxremote.authenticate=false",
+              "-Djava.rmi.server.hostname=" + getIp(),
+              "-Xms200m",
+              "-Xmx200m",
+              "-XX:MaxDirectMemorySize=200m",
+              "-Djdk.nio.maxCachedBufferSize=262144"));
+      addStartCmdParams(startCmd);
+      FileUtils.write(
+          stdoutFile, String.join(" ", startCmd) + "\n\n", StandardCharsets.UTF_8, true);
       ProcessBuilder processBuilder =
-          new ProcessBuilder(getStartCmd()).redirectOutput(stdoutFile).redirectError(stdoutFile);
+          new ProcessBuilder(startCmd)
+              .redirectOutput(ProcessBuilder.Redirect.appendTo(stdoutFile))
+              .redirectError(ProcessBuilder.Redirect.appendTo(stdoutFile));
+      processBuilder.environment().put("CLASSPATH", templateNodeLibPath);
       this.instance = processBuilder.start();
       logger.info("In test {} {} started.", getTestLogDirName(), getId());
     } catch (IOException ex) {
@@ -237,41 +252,7 @@ public abstract class AbstractNodeWrapper implements BaseNodeWrapper {
 
   protected abstract void updateConfig(Properties properties);
 
-  protected abstract String mainClassName();
-
-  private String[] getStartCmd() {
-    final String workDir = getNodePath();
-    String javaCmd = jreHome + File.separator + "bin" + File.separator;
-    if (SystemUtils.IS_OS_WINDOWS) {
-      javaCmd += "java.exe";
-    } else {
-      javaCmd += "java";
-    }
-    return new String[] {
-      javaCmd,
-      "-Dlogback.configurationFile=" + workDirFilePath("conf", "logback.xml"),
-      "-DIOTDB_HOME=" + workDir,
-      "-DTSFILE_HOME=" + workDir,
-      "-DIOTDB_HOME=" + workDir,
-      "-DTSFILE_HOME=" + workDir,
-      "-Dcom.sun.management.jmxremote.port=" + jmxPort,
-      "-Dcom.sun.management.jmxremote.rmi.port=" + jmxPort,
-      "-Djava.rmi.server.randomIDs=true",
-      "-Dcom.sun.management.jmxremote.ssl=false",
-      "-Dcom.sun.management.jmxremote.authenticate=true",
-      "-Dcom.sun.management.jmxremote.password.file=" + workDirFilePath("conf", "jmx.password"),
-      "-Dcom.sun.management.jmxremote.access.file" + workDirFilePath("conf", "jmx.access"),
-      "-Djava.rmi.server.hostname=" + getIp(),
-      "-Xms200m",
-      "-Xmx200m",
-      "-XX:MaxDirectMemorySize=200m",
-      "-Djdk.nio.maxCachedBufferSize=262144",
-      "-cp",
-      ":" + workDirFilePath("lib", "*.jar"),
-      mainClassName(),
-      "-s"
-    };
-  }
+  protected abstract void addStartCmdParams(List<String> params);
 
   private String getLogPath() {
     return getLogDirPath() + File.separator + getId() + ".log";
@@ -287,7 +268,7 @@ public abstract class AbstractNodeWrapper implements BaseNodeWrapper {
         + getTestLogDirName();
   }
 
-  private String getNodePath() {
+  protected String getNodePath() {
     return System.getProperty("user.dir") + File.separator + "target" + File.separator + getId();
   }
 
@@ -302,10 +283,8 @@ public abstract class AbstractNodeWrapper implements BaseNodeWrapper {
       logger.error("Construct JMX URL failed", e);
       return;
     }
-    Map<String, Object> environment =
-        Collections.singletonMap(JMXConnector.CREDENTIALS, new String[] {jmxUserName, jmxPassword});
 
-    try (JMXConnector connector = JMXConnectorFactory.connect(url, environment)) {
+    try (JMXConnector connector = JMXConnectorFactory.connect(url)) {
       MBeanServerConnection mbsc = connector.getMBeanServerConnection();
       ThreadMXBean tmbean =
           ManagementFactory.newPlatformMXBeanProxy(
